# pokeonta-bot

./: .gitignore  Dockerfile  README.md  development.example.yaml  production.yaml  publish.sh  pyproject.toml
.github/workflows/: workflow.yaml
manifests/: bot.yaml
pokeonta/: __main__.py  bootstrap.py  cog.py  config.py  gyms.csv  logging.py  scheduler.py
pokeonta/cogs/: air_support.py  devcog.py  events.py  go_fest.py  gyms.py  kanto_celebration.py  trainer_cards.py
pokeonta/models/: air_support_group.py  events.py  scheduler.py  trainer_cards.py
